syntax = "proto3";

option go_package = "./;protobuf";
 
message BaseRequestBody {
  string path = 1;
  bytes body = 2;
  bytes query = 3;
}

message BaseResponseBody {
  bytes data = 1;
  int64 code = 2;
  string msg = 3;
}
 
service Base {
  rpc BaseRequest(BaseRequestBody) returns (BaseResponseBody) {}
  rpc BaseStreamRequest(stream BaseRequestBody) returns (BaseResponseBody) {}
}